--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme] 
 primaryColor = "#FFFFFF" 
-backgroundColor = "#546A76" 
+backgroundColor = "#FAD4D8" 
 secondaryBackgroundColor = "#003459" 
 textColor = "#FFFFFF" 
 font = "sans serif"
