--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme] 
 primaryColor = "#FFFFFF" 
 backgroundColor = "#FAD4D8" 
-secondaryBackgroundColor = "#003459" 
+secondaryBackgroundColor = "#546A76" 
 textColor = "#FFFFFF" 
 font = "sans serif"
