--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme] 
 primaryColor = "#11313C" 
 backgroundColor = "#FAD4D8" 
-secondaryBackgroundColor = "#546A76" 
+secondaryBackgroundColor = "#A6B1B7" 
 textColor = "#11313C" 
 font = "sans serif"
