--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.10.0
-pandas==1.2.0
-numpy==1.21.2
+streamlit==1.35.0
+pandas==2.2.2
+numpy==1.26.4
 pillow==10.3.0
 openpyxl==3.1.3
-streamlit_pandas_profiling==0.1.3
-pandas_profiling==3.4.0
 plotly==5.22.0
-pip==24.0.0
+pandas-profiling==3.6.6
+streamlit-pandas-profiling==0.1.3
+pip==25.1.1
